Extend doesn't work on in GPU(OpenCL/OpenGL) rendering #48720

Closed
opened 2016-06-23 17:03:23 +02:00 by mathieu menuet · 12 comments

System Information
Win7 x64, R9 280X, Catalyst 16.3

Blender Version
Broken: fad0c33

Short description of error
Texture when set on "extend" instead of repeat will render correctly on CPU, but will repeat on GPU for both rendered(openCL) and material(OpenGL) mode.

Exact steps for others to reproduce the error
Open attached file: bug extend v2.blend
Hit Ctrl+Z with CPU mode, it renders a uniform color (correct), switch to GPU, it renders a pattern (like if it was on repeat mode)

**System Information** Win7 x64, R9 280X, Catalyst 16.3 **Blender Version** Broken: fad0c33 **Short description of error** Texture when set on "extend" instead of repeat will render correctly on CPU, but will repeat on GPU for both rendered(openCL) and material(OpenGL) mode. **Exact steps for others to reproduce the error** Open attached file: [bug extend v2.blend](https://archive.blender.org/developer/F318414/bug_extend_v2.blend) Hit Ctrl+Z with CPU mode, it renders a uniform color (correct), switch to GPU, it renders a pattern (like if it was on repeat mode)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli

Added subscribers: @Sergey, @ThomasDinges, @mont29

Added subscribers: @Sergey, @ThomasDinges, @mont29

@Sergey, @ThomasDinges, yet another one for you to check :)

@Sergey, @ThomasDinges, yet another one for you to check :)
Thomas Dinges self-assigned this 2016-07-01 22:20:58 +02:00
Thomas Dinges removed their assignment 2016-07-01 23:51:00 +02:00

Fixed the OpenCL part, will leave the OpenGL part for another day or someone else.

Fixed the OpenCL part, will leave the OpenGL part for another day or someone else.
Author

Thanks for the fix. Switching between clip, extend and repeat in rendering view mode gives artifacts. Activating another view mode (like wireframe) and reactivating the rendered view mode corrects the problem.
For some reason, the original material, which made us discover the bug still doesn't work properly on GPU (CPU is ok). I'll report later when I find why.

Thanks for the fix. Switching between clip, extend and repeat in rendering view mode gives artifacts. Activating another view mode (like wireframe) and reactivating the rendered view mode corrects the problem. For some reason, the original material, which made us discover the bug still doesn't work properly on GPU (CPU is ok). I'll report later when I find why.

Added subscriber: @brecht

Added subscriber: @brecht

I just fixed an issue in this fix in 2c9add965b, I don't know if it's related to the specific problem you saw but might be worth retesting with that revision.

I just fixed an issue in this fix in 2c9add965b, I don't know if it's related to the specific problem you saw but might be worth retesting with that revision.

Thanks for the fix Brecht, but seems there is indeed an issue with Clip Extension type (even after your fix) Not sure whats wrong yet.

Thanks for the fix Brecht, but seems there is indeed an issue with Clip Extension type (even after your fix) Not sure whats wrong yet.
Author

@brecht Thank you for the fix. It solved the viewport update problem and unexpectedly also the complex material problem.
@ThomasDinges Can you provide a material where it still fails after 2c9add965b?

@brecht Thank you for the fix. It solved the viewport update problem and unexpectedly also the complex material problem. @ThomasDinges Can you provide a material where it still fails after 2c9add965b?

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sergey Sharybin self-assigned this 2016-07-11 14:48:52 +02:00

I've fixed an extend mode in b99f7a9.

OpenGL changes would be much more involved since proper implementation using OpenGL would require binding image per image extension type, which isn't really simple with our current GPU bindings. This is actually known limitation for now.

I've fixed an extend mode in b99f7a9. OpenGL changes would be much more involved since proper implementation using OpenGL would require binding image per image extension type, which isn't really simple with our current GPU bindings. This is actually known limitation for now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48720
No description provided.