Fix Cycles OpenCL not taking Extend and Clip extension types into account.

(See T48720).